--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
     <h1>
       Grant Kollar
     </h1>
-    <img src="resouces/images/me.png" />
+    <img src="resouces/images/me.PNG" />
     <!-- WORK FROM INSIDE THIS CONTAINER-->
+  </div>
+
+  <div class="section" id="personalBackground">
+    <h2>
+      Personal Background
+    </h2>
+    <p>
+      I am a senior in Cybersecurity and Software development at the University of Cincinnati.
+      I enjoy learning about technology and I also enoy skiing whenever I get the chance to.
+    </p>
   </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
