--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
       I enjoy learning about technology and I also enoy skiing whenever I get the chance to.
     </p>
   </div>
+  <div class="section" id="experience">
+    <h2>
+      Work and Development Experience
+    </h2>
+    <ol>
+      <li>IBM Blockchanin and Cybersecurity Practitioner</li>
+      <li>It Intern at Cincinnati Cares</li>
+      <li>It Inter at Air Force One</li>
+    </ol>
+  </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
