added programming lanuages

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
       <li>It Inter at Air Force One</li>
     </ol>
   </div>
+  <div class="section" id="programmingLanguages">
+    <h2>
+      Programming Languages
+    </h2>
+    <ol>
+      <li>Python</li>
+      <li>Java</li>
+      <li>VBA</li>
+    </ol>
+  </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
