--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
       <li>VBA</li>
     </ol>
   </div>
+  <div class="section" id="achievements">
+    <h2>Achievements</h2>
+    <ul>
+      <li>Going to college</li>
+    </ul>
+  </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
