added favorite games

--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
       <li>Going to college</li>
     </ul>
   </div>
+  <div class="section" id="games">
+    <h2>
+      Favorite Games
+    </h2>
+    <ul>
+      <li>World of Warcraft</li>
+      <li>Valorant</li>
+      <li>Leauge of Legends</li>
+      <li>Runescape</li>
+    </ul>
+  </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
