--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>
       Grant Kollar
     </h1>
-    <img src="resouces/images/me.PNG" />
+    <img src="resources/images/me.jpg" />
     <!-- WORK FROM INSIDE THIS CONTAINER-->
   </div>
 
