running not working

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <h1>
-      Grant Kollar
+      Grant K
     </h1>
     <img id="myPicture" src="resources/images/me.jpg" />
     <!-- WORK FROM INSIDE THIS CONTAINER-->
