--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <h1>
-      Grant K
+      Grant Kollar
     </h1>
     <img id="myPicture" src="resources/images/me.jpg" />
     <!-- WORK FROM INSIDE THIS CONTAINER-->
