styled the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container" id="header">
     <h1>
       Grant Kollar
     </h1>
@@ -27,7 +27,7 @@
     </h2>
     <p>
       I am a senior in Cybersecurity and Software development at the University of Cincinnati.
-      I enjoy learning about technology and I also enoy skiing whenever I get the chance to.
+      I enjoy learning about technology and I also enjoy skiing whenever I get the chance to.
     </p>
   </div>
   <div class="section" id="experience">
